--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,13 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/mic_launcher"
         android:name=".BaseApplication"
-        tools:replace="android:icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
