--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".QsActivity" />
         </activity>
+        <activity
+            android:name=".SectionActivity"
+            android:label="@string/app_name">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".SectionsActivity" />
+        </activity>
     </application>
 
 </manifest>
