--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:value="com.myapp.model.Item, com.myapp.model.Category" />
 
         <activity
-            android:name=".QsActivity"
+            android:name=".QuestionnairesActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,7 +40,7 @@
             android:label="@string/app_name">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".QsActivity" />
+                android:value=".QuestionnairesActivity" />
         </activity>
         <activity
             android:name=".SectionActivity"
