--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     compile 'com.github.clans:fab:1.6.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
-    compile 'it.sephiroth.android.library.imagezoom:imagezoom:+'
+    compile 'it.sephiroth.android.library.imagezoom:imagezoom:2.2.2'
     compile 'com.google.code.gson:gson:2.4'
     compile('com.afollestad.material-dialogs:core:0.8.4.2@aar') {
         transitive = true
