--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,13 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.CAMERA" />
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="false"
+        tools:replace="android:allowBackup"
         android:icon="@mipmap/mic_launcher"
-        android:name="com.activeandroid.app.Application"
+        android:name=".MyApp"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
