--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
+
+
         <!-- Active Android -->
         <meta-data android:name="AA_DB_NAME" android:value="ls.db" />
         <meta-data android:name="AA_DB_VERSION" android:value="1" />
@@ -37,6 +39,22 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <!-- ATTENTION: This intent was auto-generated. Follow instructions at
+            https://g.co/AppIndexing/AndroidStudio to publish your Android app deep links. -->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.VIEW" />-->
+
+                <!--<category android:name="android.intent.category.DEFAULT" />-->
+                <!--<category android:name="android.intent.category.BROWSABLE" />-->
+                <!--&lt;!&ndash; ATTENTION: This data URL was auto-generated.-->
+                  <!--We recommend that you use the HTTP scheme.-->
+                  <!--TODO: Change the host or pathPrefix as necessary. &ndash;&gt;-->
+                <!--<data-->
+                    <!--android:host="landscape-connect-beta.herokuapp.com"-->
+                    <!--android:pathPrefix="/api/questionnaires/"-->
+                    <!--android:scheme="http" />-->
+            <!--</intent-filter>-->
         </activity>
         <activity
             android:name="uk.co.threeequals.landscapeconnect.SectionsActivity"
@@ -75,12 +93,13 @@
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
-        </receiver><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        </receiver>
+
+        <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+        App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
 
     </application>
 
