--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,17 +26,18 @@ dependencies {
         transitive = true
     }
     // (v4.5)
-    compile 'com.github.clans:fab:1.6.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+    compile 'com.github.clans:fab:1.6.1' //Featured Action Button Library
+    compile 'com.squareup.picasso:picasso:2.5.2' //Image loading library
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT' //Database ORM
     compile 'it.sephiroth.android.library.imagezoom:imagezoom:2.2.2'
-    compile 'com.google.code.gson:gson:2.4'
-    compile 'com.alexbbb:uploadservice:1.6'
-    compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.1.1'
-    compile 'com.journeyapps:zxing-android-embedded:3.0.2@aar'
+    compile 'com.google.code.gson:gson:2.4' //Google JSON library
+    compile 'net.gotev:uploadservice:2.0.1@aar' //Android Upload Service. Only supports files, no uploading without
+    compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.1.1' //Used for the getting location Spinner
+    compile 'com.journeyapps:zxing-android-embedded:3.0.2@aar' //Embedded scanning version of ZXing
     compile 'com.google.zxing:core:3.2.0'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.jakewharton:butterknife:7.0.1' //Use @Bind to attach views to code
     compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.google.android.gms:play-services-analytics:8.4.0'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
