--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,12 +24,12 @@
         <!-- Active Android -->
         <meta-data android:name="AA_DB_NAME" android:value="ls.db" />
         <meta-data android:name="AA_DB_VERSION" android:value="1" />
+        <meta-data
+            android:name="AA_MODELS"
+            android:value="uk.co.threeequals.landscapeconnect.Choice, uk.co.threeequals.landscapeconnect.Question, uk.co.threeequals.landscapeconnect.Questionnaire, uk.co.threeequals.landscapeconnect.QuestionResponse, uk.co.threeequals.landscapeconnect.Response, uk.co.threeequals.landscapeconnect.Section" />
+
 
         <provider android:authorities="uk.co.threeequals.landscapeconnect" android:exported="false" android:name="com.activeandroid.content.ContentProvider" />
-
-        <!--<meta-data-->
-            <!--android:name="AA_MODELS"-->
-            <!--android:value="com.myapp.model.Item, com.myapp.model.Category" />-->
 
         <activity
             android:name="uk.co.threeequals.landscapeconnect.QuestionnairesActivity"
