--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "22.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "uk.co.threeequals.landscapeconnect"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -26,9 +26,14 @@ dependencies {
         transitive = true
     }
     // (v4.5)
+
+//    compile 'com.github.RileyGB:ProactiveAndroid:34815aee15'
+//    compile 'com.github.ebatesmobile:ActiveSQL-Android:6e1a12931b'
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT' //Database ORM
+
+
     compile 'com.github.clans:fab:1.6.1' //Featured Action Button Library
     compile 'com.squareup.picasso:picasso:2.5.2' //Image loading library
-    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT' //Database ORM
     compile 'it.sephiroth.android.library.imagezoom:imagezoom:2.2.2'
     compile 'com.google.code.gson:gson:2.4' //Google JSON library
     compile 'net.gotev:uploadservice:2.0.1@aar' //Android Upload Service. Only supports files, no uploading without
