--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,7 @@
                   <!--We recommend that you use the HTTP scheme.-->
                   <!--TODO: Change the host or pathPrefix as necessary. &ndash;&gt;-->
                 <!--<data-->
-                    <!--android:host="landscape-connect-beta.herokuapp.com"-->
+                    <!--android:host="landscape-connect.com"-->
                     <!--android:pathPrefix="/api/questionnaires/"-->
                     <!--android:scheme="http" />-->
             <!--</intent-filter>-->
